Improved footer styles.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1828,6 +1828,10 @@ html {
   margin-top: auto;
 }
 
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
 .block {
   display: block;
 }
@@ -1885,6 +1889,10 @@ html {
   height: 100vh;
 }
 
+.h-4 {
+  height: 1rem;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -1920,6 +1928,10 @@ html {
 
 .w-full {
   width: 100%;
+}
+
+.w-4 {
+  width: 1rem;
 }
 
 .max-w-\[20rem\] {
