--- a/views/partials/contact-details.hbs
+++ b/views/partials/contact-details.hbs
@@ -21,7 +21,9 @@
     <p class="ml-10 mb-2"><a href="tel:324762348" class="hover:text-secondary-focus">32 476 23 48</a></p>
   </div>
 
-    <a class="m-1 grayscale hover:grayscale-0" href="https://www.facebook.com/people/Publiczne-Przedszkole-Nr-23-w-Jastrz%C4%99biu-Zdroju/100063667836211/"><div class="flex justify-center items-center p-2 font-semibold text-lg">
+    <a class="m-1 grayscale hover:grayscale-0" href="https://www.facebook.com/people/Publiczne-Przedszkole-Nr-23-w-Jastrz%C4%99biu-Zdroju/100063667836211/">
+      <div class="flex justify-center items-center p-2 font-semibold text-lg">
       <span>Znajdź nas na</span> <img src="/img/f_logo_RGB-Blue_58.png" class="w-6 ml-2" alt="Facebook logo">
-    </div></a>
+    </div>
+    </a>
 </div>
