Fixed user interface. Improved links colors.

--- a/views/album/add.hbs
+++ b/views/album/add.hbs
@@ -38,7 +38,7 @@
         </button>
 
         <a href="/album"
-           class="actions-btn mx-2">Anuluj</a>
+           class="ghost-actions-btn mx-2">Anuluj</a>
       </div>
 
     </div>
