--- a/views/news/add.hbs
+++ b/views/news/add.hbs
@@ -26,7 +26,7 @@
         </button>
 
         <a href="/aktualnosci"
-           class="actions-btn mx-2">Anuluj</a>
+           class="ghost-actions-btn mx-2">Anuluj</a>
       </div>
     </div>
   </form>
