--- a/views/news/edit.hbs
+++ b/views/news/edit.hbs
@@ -42,7 +42,7 @@
           </button>
 
           <a href="/aktualnosci/{{this.id}}"
-             class="actions-btn mx-2 mt-2 sm:my-0">Anuluj</a>
+             class="ghost-actions-btn mx-2 mt-2 sm:my-0">Anuluj</a>
 
         </div>
       </form>
