--- a/views/partials/deleting-dialog-box.hbs
+++ b/views/partials/deleting-dialog-box.hbs
@@ -16,7 +16,7 @@
         <button
           type="button"
           id="cancel-deleting"
-          class="actions-btn mx-2 mt-2"
+          class="ghost-actions-btn mx-2 mt-2"
         >
           Anuluj
         </button>
