--- a/views/partials/layout/footer.hbs
+++ b/views/partials/layout/footer.hbs
@@ -1,16 +1,27 @@
 <footer class="footer p-10 bg-secondary justify-around">
 
   <div>
-    <svg width="50" height="50" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" class="fill-current"><path d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z"></path></svg>
-    <p class="font-bold">Publiczne Przedszkole nr 23 w Jastrzębiu-Zdroju<br/>Providing reliable tech since 1992</p>
+    <svg width="50" height="50" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd"
+         clip-rule="evenodd" class="fill-current">
+      <path
+        d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z">
+      </path>
+    </svg>
+    <!--    @TODO: change logo-->
+    <p class="font-bold">Publiczne Przedszkole nr 23 w Jastrzębiu-Zdroju<br />Providing reliable tech since 1992</p>
+    <!--    @TODO: change this-->
     <p>Designed: by Nieopodal.dev</p>
   </div>
   <div>
     <span class="footer-title">Kontakt</span>
-    <div class="link link-hover flex items-center"><span class="w-4 h-4 mr-2">{{> icons/pin-svg}}</span> <span>ul. 1 Maja 3A, 44-330, Jastrzębie-Zdrój</span></div>
-    <a class="link link-hover flex items-center" href="mailto:poczta@pp23.jastrzebie.pl"><span class="w-4 h-4 mr-2">{{> icons/mail-svg}}</span> <span>poczta@pp23.jastrzebie.pl</span></a>
-    <a class="link link-hover flex items-center" href="tel:324762348"><span class="w-4 h-4 mr-2">{{> icons/tel-svg}}</span> <span>32 476 23 48</span></a>
-    <a class="m-1 grayscale hover:grayscale-0" href="https://www.facebook.com/people/Publiczne-Przedszkole-Nr-23-w-Jastrz%C4%99biu-Zdroju/100063667836211/">
+    <div class="link link-hover flex items-center"><span class="w-4 h-4 mr-2">{{> icons/pin-svg}}</span> <span>ul. 1 Maja 3A, 44-330, Jastrzębie-Zdrój</span>
+    </div>
+    <a class="link link-hover flex items-center" href="mailto:poczta@pp23.jastrzebie.pl"><span
+      class="w-4 h-4 mr-2">{{> icons/mail-svg}}</span> <span>poczta@pp23.jastrzebie.pl</span></a>
+    <a class="link link-hover flex items-center" href="tel:324762348"><span
+      class="w-4 h-4 mr-2">{{> icons/tel-svg}}</span> <span>32 476 23 48</span></a>
+    <a class="m-1 grayscale hover:grayscale-0"
+       href="https://www.facebook.com/people/Publiczne-Przedszkole-Nr-23-w-Jastrz%C4%99biu-Zdroju/100063667836211/">
       <div class="flex items-center font-semibold">
         <span>Znajdź nas na</span> <img src="/img/f_logo_RGB-Blue_58.png" class="w-4 ml-2" alt="Facebook logo">
       </div>
