--- a/views/partials/album/editing-form.hbs
+++ b/views/partials/album/editing-form.hbs
@@ -38,7 +38,7 @@
       >
         Usuń album
       </button>
-      <a href="/album/{{this.id}}" class="actions-btn">Anuluj</a>
+      <a href="/album/{{this.id}}" class="ghost-actions-btn">Anuluj</a>
     </div>
   </div>
 </form>
