--- a/views/partials/layout/user-header.hbs
+++ b/views/partials/layout/user-header.hbs
@@ -4,7 +4,7 @@
         {{> icons/user-svg}}
     </label>
     <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
-      <li><a href="/dashboard">Dashboard</a></li>
+      <li><a href="/dashboard">Panel administracyjny</a></li>
       <li><a href="/auth/logout">Wyloguj</a></li>
     </ul>
   </div>
