Fix: improved footer classes.

--- a/views/partials/layout/footer.hbs
+++ b/views/partials/layout/footer.hbs
@@ -14,7 +14,7 @@
   </div>
   <div>
     <span class="footer-title">Kontakt</span>
-    <div class="link link-hover flex items-center"><span class="w-4 h-4 mr-2">{{> icons/pin-svg}}</span> <span>ul. 1 Maja 3A, 44-330, Jastrzębie-Zdrój</span>
+    <div class="flex items-center"><span class="w-4 h-4 mr-2">{{> icons/pin-svg}}</span> <span>ul. 1 Maja 3A, 44-330, Jastrzębie-Zdrój</span>
     </div>
     <a class="link link-hover flex items-center" href="mailto:poczta@pp23.jastrzebie.pl"><span
       class="w-4 h-4 mr-2">{{> icons/mail-svg}}</span> <span>poczta@pp23.jastrzebie.pl</span></a>
