--- a/views/news/list-one.hbs
+++ b/views/news/list-one.hbs
@@ -5,7 +5,7 @@
 
     <h3 class="text-center pb-10 pt-2">Data: {{this.createdAt}}</h3>
 
-    {{#if userLoggedIn}}
+    {{#if ../userLoggedIn}}
       {{> edit-post this}}
     {{/if}}
 
