--- a/views/partials/layout/header.hbs
+++ b/views/partials/layout/header.hbs
@@ -1,72 +1,124 @@
-<header class="navbar bg-base-100 fixed top-0 z-50 shadow-md border-2 h-[67px] flex justify-between">
+<header>
+  <nav class="w-full navbar bg-base-100 fixed top-0 py-0 my-0 z-40 shadow-md border-2 font-semibold text-secondary-focus">
+    <div class="flex-none lg:hidden">
+      <label for="my-drawer-3" class="btn btn-square btn-ghost">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+             class="inline-block w-6 h-6 stroke-current">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+        </svg>
+      </label>
+    </div>
+    <div class=" flex-1 flex justify-center lg:block px-2 mx-2">
+      <a href="/"
+         class="text-primary-focus font-semibold w-fit text-sm md:text-xl  whitespace-prewrap break-all"
+      >
+        Publiczne Przedszkole nr 23 w Jastrzębiu-Zdroju
+      </a>
+    </div>
+    <div class="flex-none hidden lg:block">
+      <ul class="menu menu-horizontal">
 
-  <div class="dropdown xl:hidden">
-    <label tabindex="0" class="btn btn-ghost btn-circle">
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" />
-      </svg>
-    </label>
-    <ul
-      tabindex="0"
-      class="block menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52 absolute h-fit flex-none text-secondary-focus font-semibold"
-    >
-      <li><a href="/">Strona główna</a></li>
-      <li><a href="/aktualnosci">Aktualności</a></li>
-      <li><a href="/pracownicy-przedszkola">Pracownicy przedszkola</a></li>
-      <li><a href="/grupy-w-przedszkolu">Grupy w przedszkolu</a></li>
-      <li><a href="/realizowane-programy-certyfikaty">Realizowane programy, certyfikaty</a></li>
-      <li><a href="/organizacja-pracy">Organizacja pracy</a></li>
-      <li><a href="/album">Album fotograficzny</a></li>
-      <li><a href="/o-przedszkolu">O przedszkolu</a></li>
-      <li><a href="/kontakt">Kontakt</a></li>
-      <li><a href="/statut">Statut</a></li>
-      <li><a href="/oplaty">Opłaty</a></li>
-      <li><a href="/ochrona-danych-osobowych">Ochrona danych osobowych</a></li>
-      {{#unless userLoggedIn}}
-        <li><a href="/auth/login">Logowanie</a></li>
-      {{/unless}}
-    </ul>
-  </div>
-
-  <div class="xl:flex-1 mx-auto w-fit xl:w-full">
-    <a href="/"
-       class="sm:btn sm:btn-ghost sm:text-primary-focus  font-semibold normal-case text-sm md:text-xl text-primary-focus whitespace-prewrap break-all">Publiczne
-      Przedszkole nr 23 w
-      Jastrzębiu-Zdroju</a>
-  </div>
-
-  <div class="flex-none gap-2 text-secondary-focus font-semibold">
-
-<!-- this is hidden until xl-->
-    <ul class="menu hidden xl:flex menu-horizontal px-1">
-      <li tabindex="0">
-        <a>
-          Menu
-          <svg class="fill-current" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
-            <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z" />
-          </svg>
-        </a>
-        <ul class="p-2 bg-base-100 z-50 shadow-xl">
-          <li><a href="/">Strona główna</a></li>
-          <li><a href="/aktualnosci">Aktualności</a></li>
-          <li><a href="/pracownicy-przedszkola">Pracownicy przedszkola</a></li>
-          <li><a href="/grupy-w-przedszkolu">Grupy w przedszkolu</a></li>
-          <li><a href="/realizowane-programy-certyfikaty">Realizowane programy, certyfikaty</a></li>
-          <li><a href="/organizacja-pracy">Organizacja pracy</a></li>
-          <li><a href="/album">Album fotograficzny</a></li>
-          {{#unless userLoggedIn}}
-            <li><a href="/auth/login">Logowanie</a></li>
-          {{/unless}}
-        </ul>
-      </li>
-      <li><a href="/o-przedszkolu">O przedszkolu</a></li>
-      <li><a href="/kontakt">Kontakt</a></li>
-      <li><a href="/statut">Statut</a></li>
-      <li><a href="/oplaty">Opłaty</a></li>
-      <li><a href="/ochrona-danych-osobowych">Ochrona danych osobowych</a></li>
-    </ul>
-
+        <li tabindex="0">
+          <a>
+            Menu
+            <svg class="fill-current" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
+              <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z" />
+            </svg>
+          </a>
+          <ul class="p-2 bg-base-100 z-50 shadow rounded-box border-2">
+            <li><a href="/">Strona główna</a></li>
+            <li><a href="/aktualnosci">Aktualności</a></li>
+            <li><a href="/pracownicy-przedszkola">Pracownicy przedszkola</a></li>
+            <li><a href="/grupy-w-przedszkolu">Grupy w przedszkolu</a></li>
+            <li><a href="/realizowane-programy-certyfikaty">Realizowane programy, certyfikaty</a></li>
+            <li><a href="/organizacja-pracy">Organizacja pracy</a></li>
+            <li><a href="/album">Album fotograficzny</a></li>
+            {{#unless userLoggedIn}}
+              <li><a href="/auth/login">Logowanie</a></li>
+            {{/unless}}
+          </ul>
+        </li>
+        <li><a href="/o-przedszkolu">O przedszkolu</a></li>
+        <li><a href="/kontakt">Kontakt</a></li>
+        <li><a href="/statut">Statut</a></li>
+        <li><a href="/oplaty">Opłaty</a></li>
+        <li><a href="/ochrona-danych-osobowych">Ochrona danych osobowych</a></li>
+      </ul>
+    </div>
     {{> layout/user-header this}}
-
-  </div>
+  </nav>
 </header>
+
+<!--<header class="navbar bg-base-100 fixed top-0 z-50 shadow-md border-2 h-[67px] flex justify-between">-->
+
+
+<!--  <div class="dropdown xl:hidden">-->
+<!--    <label tabindex="0" class="btn btn-ghost btn-circle">-->
+<!--      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">-->
+<!--        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" />-->
+<!--      </svg>-->
+<!--    </label>-->
+<!--    <ul-->
+<!--      tabindex="0"-->
+<!--      class="block menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52 absolute h-fit flex-none text-secondary-focus font-semibold"-->
+<!--    >-->
+<!--      <li><a href="/">Strona główna</a></li>-->
+<!--      <li><a href="/aktualnosci">Aktualności</a></li>-->
+<!--      <li><a href="/pracownicy-przedszkola">Pracownicy przedszkola</a></li>-->
+<!--      <li><a href="/grupy-w-przedszkolu">Grupy w przedszkolu</a></li>-->
+<!--      <li><a href="/realizowane-programy-certyfikaty">Realizowane programy, certyfikaty</a></li>-->
+<!--      <li><a href="/organizacja-pracy">Organizacja pracy</a></li>-->
+<!--      <li><a href="/album">Album fotograficzny</a></li>-->
+<!--      <li><a href="/o-przedszkolu">O przedszkolu</a></li>-->
+<!--      <li><a href="/kontakt">Kontakt</a></li>-->
+<!--      <li><a href="/statut">Statut</a></li>-->
+<!--      <li><a href="/oplaty">Opłaty</a></li>-->
+<!--      <li><a href="/ochrona-danych-osobowych">Ochrona danych osobowych</a></li>-->
+  <!--      {{#unless userLoggedIn}}-->
+<!--        <li><a href="/auth/login">Logowanie</a></li>-->
+  <!--      {{/unless}}-->
+<!--    </ul>-->
+<!--  </div>-->
+
+<!--  <div class="xl:flex-1 mx-auto w-fit xl:w-full">-->
+<!--    <a href="/"-->
+<!--       class="sm:btn sm:btn-ghost sm:text-primary-focus  font-semibold normal-case text-sm md:text-xl text-primary-focus whitespace-prewrap break-all">Publiczne-->
+<!--      Przedszkole nr 23 w-->
+<!--      Jastrzębiu-Zdroju</a>-->
+<!--  </div>-->
+
+<!--  <div class="flex-none gap-2 text-secondary-focus font-semibold">-->
+
+<!--&lt;!&ndash; this is hidden until xl&ndash;&gt;-->
+<!--    <ul class="menu hidden xl:flex menu-horizontal px-1">-->
+<!--      <li tabindex="0">-->
+<!--        <a>-->
+<!--          Menu-->
+<!--          <svg class="fill-current" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">-->
+<!--            <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z" />-->
+<!--          </svg>-->
+<!--        </a>-->
+<!--        <ul class="p-2 bg-base-100 z-50 shadow-xl">-->
+<!--          <li><a href="/">Strona główna</a></li>-->
+<!--          <li><a href="/aktualnosci">Aktualności</a></li>-->
+<!--          <li><a href="/pracownicy-przedszkola">Pracownicy przedszkola</a></li>-->
+<!--          <li><a href="/grupy-w-przedszkolu">Grupy w przedszkolu</a></li>-->
+<!--          <li><a href="/realizowane-programy-certyfikaty">Realizowane programy, certyfikaty</a></li>-->
+<!--          <li><a href="/organizacja-pracy">Organizacja pracy</a></li>-->
+<!--          <li><a href="/album">Album fotograficzny</a></li>-->
+  <!--          {{#unless userLoggedIn}}-->
+<!--            <li><a href="/auth/login">Logowanie</a></li>-->
+  <!--          {{/unless}}-->
+<!--        </ul>-->
+<!--      </li>-->
+<!--      <li><a href="/o-przedszkolu">O przedszkolu</a></li>-->
+<!--      <li><a href="/kontakt">Kontakt</a></li>-->
+<!--      <li><a href="/statut">Statut</a></li>-->
+<!--      <li><a href="/oplaty">Opłaty</a></li>-->
+<!--      <li><a href="/ochrona-danych-osobowych">Ochrona danych osobowych</a></li>-->
+<!--    </ul>-->
+
+<!--    {{> layout/user-header this}}-->
+
+<!--  </div>-->
+<!--</header>-->
