--- a/views/partials/layout/user-header.hbs
+++ b/views/partials/layout/user-header.hbs
@@ -3,7 +3,7 @@
     <label tabindex="0" class="btn btn-ghost btn-circle avatar border-secondary-content">
         {{> icons/user-svg}}
     </label>
-    <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
+    <ul tabindex="0" class="mt-3 p-2 shadow menu dropdown-content bg-base-100 rounded-box w-52">
       <li><a href="/dashboard">Panel administracyjny</a></li>
       <li><a href="/auth/logout">Wyloguj</a></li>
     </ul>
