Fix: improved RWD.

--- a/views/partials/layout/header.hbs
+++ b/views/partials/layout/header.hbs
@@ -1,5 +1,5 @@
 <header>
-  <nav class="w-full navbar bg-base-100 fixed top-0 py-0 my-0 z-40 shadow-md border-2 font-semibold text-secondary-focus">
+  <nav class="w-full navbar bg-base-100 fixed top-0 py-0 my-0 z-40 shadow-md border-2 font-semibold text-secondary-focus flex justify-between">
     <div class="flex-none lg:hidden">
       <label for="my-drawer-3" class="btn btn-square btn-ghost">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -8,9 +8,9 @@
         </svg>
       </label>
     </div>
-    <div class=" flex-1 flex justify-center lg:block px-2 mx-2">
+    <div class="lg:flex-1 flex justify-center lg:block px-2 mx-2">
       <a href="/"
-         class="text-primary-focus font-semibold w-fit text-sm md:text-xl  whitespace-prewrap break-all"
+         class="text-primary-focus font-semibold w-fit text-sm md:text-xl  whitespace-prewrap"
       >
         Publiczne Przedszkole nr 23 w Jastrzębiu-Zdroju
       </a>
