--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -4334,6 +4334,10 @@ html {
     display: none;
   }
 
+  .lg\:flex-1 {
+    flex: 1 1 0%;
+  }
+
   .lg\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
