--- a/views/partials/layout/header.hbs
+++ b/views/partials/layout/header.hbs
@@ -1,50 +1,47 @@
-<header>
-  <nav class="w-full navbar bg-base-100 fixed top-0 py-0 my-0 z-40 shadow-md border-2 font-semibold text-secondary-focus flex justify-between">
-    <div class="flex-none lg:hidden">
-      <label for="my-drawer-3" class="btn btn-square btn-ghost">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-             class="inline-block w-6 h-6 stroke-current">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-        </svg>
-      </label>
-    </div>
-    <div class="lg:flex-1 flex justify-center lg:block px-2 mx-2">
-      <a href="/"
-         class="text-primary-focus font-semibold w-fit text-sm md:text-xl  whitespace-prewrap"
-      >
-        Publiczne Przedszkole nr 23 w Jastrzębiu-Zdroju
-      </a>
-    </div>
-    <div class="flex-none hidden lg:block">
-      <ul class="menu menu-horizontal">
+<header class="border-gray-200 dark:bg-gray-900 block xl:fixed top-0 w-full bg-base-100 z-20 shadow-lg border-y-2">
+  <nav class="flex flex-wrap items-center justify-between p-4">
+    <a href="/"
+       class="sm:btn sm:btn-ghost sm:text-primary-focus font-semibold normal-case text-sm md:text-xl text-primary-focus whitespace-prewrap break-words pl-1 {{#if
+         userLoggedIn}}max-w-[70%]{{/if}} {{#unless userLoggedIn}}max-w-[80%]{{/unless}}">Publiczne
+      Przedszkole nr 23 w Jastrzębiu-Zdroju</a>
 
-        <li tabindex="0">
-          <a>
-            Menu
-            <svg class="fill-current" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
-              <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z" />
-            </svg>
-          </a>
-          <ul class="p-2 bg-base-100 z-50 shadow rounded-box border-2">
-            <li><a href="/">Strona główna</a></li>
-            <li><a href="/aktualnosci">Aktualności</a></li>
-            <li><a href="/pracownicy-przedszkola">Pracownicy przedszkola</a></li>
-            <li><a href="/grupy-w-przedszkolu">Grupy w przedszkolu</a></li>
-            <li><a href="/realizowane-programy-certyfikaty">Realizowane programy, certyfikaty</a></li>
-            <li><a href="/organizacja-pracy">Organizacja pracy</a></li>
-            <li><a href="/album">Album fotograficzny</a></li>
-            {{#unless userLoggedIn}}
-              <li><a href="/auth/login">Logowanie</a></li>
-            {{/unless}}
-          </ul>
+    <div class="flex items-center {{#if userLoggedIn}}md:order-2{{/if}}">
+      {{> layout/user-menu}}
+
+      <button data-collapse-toggle="mobile-menu-2" type="button"
+              class="inline-flex items-center btn btn-ghost avatar md:hidden p-1"
+              aria-controls="mobile-menu-2" aria-expanded="false">
+        <span class="sr-only">Open main menu</span>
+        <span class="w-6 h-6 rounded-full">{{> icons/menu-svg}}</span>
+      </button>
+
+    </div>
+    <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="mobile-menu-2">
+      <ul
+        class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg md:flex-row md:mt-0 md:border-0">
+        {{> layout/mobile-menu}}
+        {{> layout/desktop-menu}}
+
+        <li>
+          <a class="btn btn-ghost text-secondary-focus w-full md:w-fit justify-start md:justify-center"
+             href="/o-przedszkolu"
+          >O przedszkolu</a>
         </li>
-        <li><a href="/o-przedszkolu">O przedszkolu</a></li>
-        <li><a href="/kontakt">Kontakt</a></li>
-        <li><a href="/statut">Statut</a></li>
-        <li><a href="/oplaty">Opłaty</a></li>
-        <li><a href="/ochrona-danych-osobowych">Ochrona danych osobowych</a></li>
+        <li>
+          <a class="btn btn-ghost text-secondary-focus w-full md:w-fit justify-start md:justify-center" href="/kontakt"
+          >Kontakt</a>
+        </li>
+        <li>
+          <a class="btn btn-ghost text-secondary-focus w-full md:w-fit justify-start md:justify-center" href="/statut">Statut</a>
+        </li>
+        <li>
+          <a class="btn btn-ghost text-secondary-focus w-full md:w-fit justify-start md:justify-center" href="/oplaty">Opłaty</a>
+        </li>
+        <li>
+          <a class="btn btn-ghost text-secondary-focus w-full md:w-fit justify-start md:justify-center"
+             href="/ochrona-danych-osobowych">Ochrona danych osobowych</a>
+        </li>
       </ul>
     </div>
-    {{> layout/user-header this}}
   </nav>
 </header>
