--- a/views/partials/layout/desktop-menu.hbs
+++ b/views/partials/layout/desktop-menu.hbs
@@ -9,40 +9,41 @@
   </button>
 
   <div id="dropdownNavbar"
-       class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow-lg w-52">
+       class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow-lg w-52"
+  >
     <ul class="py-2 text-sm" aria-labelledby="dropdownLargeButton">
       <li>
-        <a href="/" class="block px-4 py-2 hover:bg-gray-100">Strona
+        <a href="/" class="desktop-menu-item">Strona
           główna</a>
       </li>
       <li>
         <a href="/aktualnosci"
-           class="block px-4 py-2 hover:bg-gray-100">Aktualności</a>
+           class="desktop-menu-item">Aktualności</a>
       </li>
       <li>
         <a href="/pracownicy-przedszkola"
-           class="block px-4 py-2 hover:bg-gray-100">Pracownicy
+           class="desktop-menu-item">Pracownicy
           przedszkola</a>
       </li>
 
       <li>
         <a href="/grupy-w-przedszkolu"
-           class="block px-4 py-2 hover:bg-gray-100">Grupy w
+           class="desktop-menu-item">Grupy w
           przedszkolu</a>
       </li>
 
       <li>
         <a href="/realizowane-programy-certyfikaty"
-           class="block px-4 py-2 hover:bg-gray-100">Realizowane
+           class="desktop-menu-item">Realizowane
           programy, certyfikaty</a>
       </li>
       <li>
         <a href="/organizacja-pracy"
-           class="block px-4 py-2 hover:bg-gray-100">Organizacja
+           class="desktop-menu-item">Organizacja
           pracy</a>
       </li>
       <li>
-        <a href="/album" class="block px-4 py-2 hover:bg-gray-100">Album
+        <a href="/album" class="desktop-menu-item">Album
           fotograficzny</a>
       </li>
 
@@ -50,7 +51,7 @@
     {{#unless userLoggedIn}}
       <div class="py-1">
         <a href="/auth/login"
-           class="block px-4 py-2 hover:bg-gray-100">Logowanie</a>
+           class="desktop-menu-item">Logowanie</a>
       </div>
     {{/unless}}
   </div>
