--- a/views/partials/layout/header.hbs
+++ b/views/partials/layout/header.hbs
@@ -11,7 +11,7 @@
       <button data-collapse-toggle="mobile-menu-2" type="button"
               class="inline-flex items-center btn btn-ghost avatar md:hidden p-1"
               aria-controls="mobile-menu-2" aria-expanded="false">
-        <span class="sr-only">Open main menu</span>
+        <span class="sr-only">Otwórz menu główne</span>
         <span class="w-6 h-6 rounded-full">{{> icons/menu-svg}}</span>
       </button>
 
@@ -23,22 +23,22 @@
         {{> layout/desktop-menu}}
 
         <li>
-          <a class="btn btn-ghost text-secondary-focus w-full md:w-fit justify-start md:justify-center"
+          <a class="main-menu-item"
              href="/o-przedszkolu"
           >O przedszkolu</a>
         </li>
         <li>
-          <a class="btn btn-ghost text-secondary-focus w-full md:w-fit justify-start md:justify-center" href="/kontakt"
+          <a class="main-menu-item" href="/kontakt"
           >Kontakt</a>
         </li>
         <li>
-          <a class="btn btn-ghost text-secondary-focus w-full md:w-fit justify-start md:justify-center" href="/statut">Statut</a>
+          <a class="main-menu-item" href="/statut">Statut</a>
         </li>
         <li>
-          <a class="btn btn-ghost text-secondary-focus w-full md:w-fit justify-start md:justify-center" href="/oplaty">Opłaty</a>
+          <a class="main-menu-item" href="/oplaty">Opłaty</a>
         </li>
         <li>
-          <a class="btn btn-ghost text-secondary-focus w-full md:w-fit justify-start md:justify-center"
+          <a class="main-menu-item"
              href="/ochrona-danych-osobowych">Ochrona danych osobowych</a>
         </li>
       </ul>
