--- a/views/partials/layout/user-menu.hbs
+++ b/views/partials/layout/user-menu.hbs
@@ -20,11 +20,11 @@
     <ul class="py-2" aria-labelledby="user-menu-button">
       <li>
         <a href="/dashboard"
-           class="block px-4 py-2 text-sm hover:bg-gray-100">Panel administracyjny</a>
+           class="user-menu-item">Panel administracyjny</a>
       </li>
       <li>
         <a href="/auth/logout"
-           class="block px-4 py-2 text-sm hover:bg-gray-100">Wyloguj</a>
+           class="user-menu-item">Wyloguj</a>
       </li>
     </ul>
   </div>
