Cleaned up desktop and mobile menu code.

--- a/views/partials/layout/desktop-menu.hbs
+++ b/views/partials/layout/desktop-menu.hbs
@@ -13,45 +13,30 @@
   >
     <ul class="py-2 text-sm" aria-labelledby="dropdownLargeButton">
       <li>
-        <a href="/" class="desktop-menu-item">Strona
-          główna</a>
+        <a href="/" class="desktop-menu-item">Strona główna</a>
       </li>
       <li>
-        <a href="/aktualnosci"
-           class="desktop-menu-item">Aktualności</a>
+        <a href="/aktualnosci" class="desktop-menu-item">Aktualności</a>
       </li>
       <li>
-        <a href="/pracownicy-przedszkola"
-           class="desktop-menu-item">Pracownicy
-          przedszkola</a>
-      </li>
-
-      <li>
-        <a href="/grupy-w-przedszkolu"
-           class="desktop-menu-item">Grupy w
-          przedszkolu</a>
-      </li>
-
-      <li>
-        <a href="/realizowane-programy-certyfikaty"
-           class="desktop-menu-item">Realizowane
-          programy, certyfikaty</a>
+        <a href="/pracownicy-przedszkola" class="desktop-menu-item">Pracownicy przedszkola</a>
       </li>
       <li>
-        <a href="/organizacja-pracy"
-           class="desktop-menu-item">Organizacja
-          pracy</a>
+        <a href="/grupy-w-przedszkolu" class="desktop-menu-item">Grupy w przedszkolu</a>
       </li>
       <li>
-        <a href="/album" class="desktop-menu-item">Album
-          fotograficzny</a>
+        <a href="/realizowane-programy-certyfikaty" class="desktop-menu-item">Realizowane programy, certyfikaty</a>
       </li>
-
+      <li>
+        <a href="/organizacja-pracy" class="desktop-menu-item">Organizacja pracy</a>
+      </li>
+      <li>
+        <a href="/album" class="desktop-menu-item">Album fotograficzny</a>
+      </li>
     </ul>
     {{#unless userLoggedIn}}
       <div class="py-1">
-        <a href="/auth/login"
-           class="desktop-menu-item">Logowanie</a>
+        <a href="/auth/login" class="desktop-menu-item">Logowanie</a>
       </div>
     {{/unless}}
   </div>
