--- a/views/partials/layout/mobile-menu.hbs
+++ b/views/partials/layout/mobile-menu.hbs
@@ -1,7 +1,7 @@
-<li class="md:hidden">
+<li class="xl:hidden">
   <button
     type="button"
-    class="btn btn-ghost text-secondary-focus w-full md:w-fit justify-start md:justify-center"
+    class="btn btn-ghost text-secondary-focus w-full xl:w-fit justify-start xl:justify-center"
     aria-controls="mobile-dropdown"
     data-collapse-toggle="mobile-dropdown"
   >
