--- a/views/partials/layout/user-menu.hbs
+++ b/views/partials/layout/user-menu.hbs
@@ -8,7 +8,7 @@
     data-dropdown-placement="bottom"
   >
     <span class="sr-only">Menu administratora</span>
-    <span class="w-6 h-6">{{> icons/user-svg}}</span>
+    <span class="w-6 h-6 xl:text-secondary-focus">{{> icons/user-svg}}</span>
   </button>
 
   <div
