--- a/views/partials/layout/desktop-menu.hbs
+++ b/views/partials/layout/desktop-menu.hbs
@@ -1,8 +1,8 @@
-<li class="hidden md:block text-secondary-focus">
+<li class="hidden xl:block text-secondary-focus">
   <button
     id="dropdownNavbarLink"
     data-dropdown-toggle="dropdownNavbar"
-    class="flex items-center justify-between btn btn-ghost"
+    class="flex items-center justify-between btn btn-ghost px-2 2xl:px-4"
   >
     Menu
     <span class="w-6 h-6 ml-1">{{> icons/expand-svg}}</span>
